Add Check endpoint to allow clients to verify their results have been received (#33)
